--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,19 +3,83 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+body {
+    background-color: #343a40;
+    /* dark gray */
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0;
+    padding: 0;
+    color: white;
+    background-image: linear-gradient(to right, #f838ff83 0%, #3600f950 100%);
+}
+
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+body * {
+    animation: fade-in 0.5s ease-in-out;
+}
+
+a.text_dec {
+    color: white;
+    text-decoration: none;
+}
+
+a.text_dec:hover {
+    color: tomato;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+img {
+    border-radius: 80px;
+    ;
+}
+
 .nav-title {
     font-weight: 800;
     font-size: 45px;
     margin-top: 51px;
 }
 
+
+.col {
+    height: 60vh;
+    width: 20vw;
+}
+
+.card h-100 {
+    height: 45vh;
+    width: 20vw;
+    /* border: 1px solid salmon; */
+}
+
+
+
 .port {
     margin-top: 50px;
+}
+
+.text_dec {
+    text-decoration: none;
+    margin-right: 8px;
+    color: black;
 }
 
 .text-primary {
     color: #FD6E0A;
 }
+
 
 nav {
     display: flex;
@@ -73,26 +137,29 @@ nav li {
 
 .mary {
     margin-right: 163px;
+    margin-bottom: 10px;
 }
 
 .hardy {
     margin-right: 20px;
+    margin-top: 10px;
+    border-radius: 50px;
 }
 
 .header {
-    background: #FFF8F3;
-    background-image: url('../images/header_bg.png'), url('../images/developer.png');
+    /* background: #FFF8F3; */
     background-repeat: no-repeat;
     background-position: bottom right, left;
     margin-bottom: 130px;
 }
+
 .first {
     margin-bottom: 20px;
 }
 
 .first-title {
     margin: 0 auto;
-    background: #FFF8F3;
+    /* background: #FFF8F3; */
     padding: 130px 150px;
     max-width: 1140px;
     width: 827px;
@@ -110,7 +177,7 @@ nav li {
 
 .second-title {
     margin-bottom: 20px;
-    color: #757575;
+    /* color: #757575; */
 }
 
 .type {
@@ -125,13 +192,17 @@ nav li {
 
 .about-title {
     font-size: 20px;
-    color: #757575;
+    /* color: #757575; */
 }
 
 .about-description {
     font-weight: 700;
     font-size: 20px;
-    color: #474747;
+    /* color: #474747; */
+}
+
+.decription {
+    color: #757575;
 }
 
 .head {
@@ -148,9 +219,13 @@ nav li {
     margin: 0 auto;
     width: 827px;
     height: 75px;
-    margin-top: 130px;
-    margin-bottom: 80px;
+    margin-top: 20px;
+    margin-bottom: 150px;
+    /* border: 1px solid salmon; */
+
 }
+
+.more {}
 
 .second-sec {
     margin: 0 auto;
@@ -167,6 +242,11 @@ nav li {
     margin-right: 20px;
 }
 
+.caro_style {
+    margin: 0 200px;
+    ;
+}
+
 .skill-container {
     margin: 0 200px;
     width: 73vw;
@@ -174,16 +254,72 @@ nav li {
     /* padding:130px 150px; */
     display: flex;
     gap: 24px;
+
+}
+
+.img_size {
+    height: 45vh;
+    width: 20vw;
+    box-shadow: 0px 20px 20px rgba(170, 66, 25, 0.989);
+    border-radius: 10px;
 }
 
 .skill {
-    border-color: #FD6E0A;
-    background: #FFFFFF;
-    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
-    border-radius: 5px;
+    /* background-image: linear-gradient(to bottom, #f838ff83 0%, #3600f950 100%);     */
+    box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
     width: 267px;
     height: 300px;
     padding: 30px;
+    background-color: black;
+    border: 1px solid salmon;
+    /* color: white; */
+}
+
+#style_card {
+    border: 1px solid salmon;
+    border-radius: 80px;
+    margin-bottom: 30px;
+    background-color: black;
+    margin: 0 200px;
+    ;
+
+}
+
+#grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.card-img-top {
+    height: 45vh;
+    width: 20vw;
+    border-radius: 10px;
+
+}
+
+#text_align {
+    background-repeat: no-repeat;
+
+}
+
+.card-body {
+    width: 20vw
+}
+
+#grid1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+/* .first-sec{
+    margin-bottom: 100px;
+    border: 1px solid salmon;
+} */
+.first_card {
+    background-color: yellow;
+    align-items: center;
+    justify-content: center;
 }
 
 .title-one {
@@ -191,10 +327,11 @@ nav li {
     font-size: 20px;
     margin-top: 30px;
     margin-bottom: 20px;
+    color: #FD6E0A;
 }
 
 .decription {
-    color: #757575;
+    color: white;
     width: 201px;
     height: 196px;
 }
@@ -208,11 +345,42 @@ nav li {
     margin: 0 200px;
     margin-bottom: 50px;
     margin-top: 130px;
+    /* border: 1px solid salmon; */
+    width: 85vw;
+}
+
+#card_grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+
+.card {
+    width: 33.33%;
+    padding: 10px;
+    text-align: center;
+
+}
+
+#style_car1 {
+    float: right;
+    background-color: black;
+    border: 1px solid salmon;
+    border-radius: 80px;
+    margin-bottom: 200px;
+    ;
+    display: block;
+    margin-right: 200px;
+}
+
+#card2 {
+    display: block;
+
 }
 
 .summary {
     text-align: center;
-    margin-bottom: 113px;
+    margin-bottom: 50px;
 }
 
 .mas {
@@ -236,7 +404,7 @@ nav li {
 }
 
 .para {
-    color: #757575;
+    color: white;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -253,13 +421,13 @@ nav li {
 
     height: 700px;
     left: 0px;
-    background: #FFF8F3;
+    /* background: #FFF8F3; */
 }
 
 .para1 {
     font-weight: 400;
     font-size: 16px;
-    color: #474747;
+    /* color: #474747; */
     width: 562px;
     height: 56px;
     margin-right: 60px;
@@ -300,6 +468,7 @@ nav li {
     border-style: none;
 }
 
+
 .messgae {
     width: 350px;
     height: 50x;
@@ -323,4 +492,90 @@ nav li {
 .img-src2 {
     margin-right: 24px;
     margin-top: 30px;
+}
+
+/* .body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 200px);
+    /* gap: 20px; 
+}
+
+@media screen and (max-width:576px) {
+    .body {
+        grid-template-columns: 1fr;
+    }
+} */
+.hide {
+    display: none;
+}
+
+.carousel {
+    margin-top: 60px;
+}
+
+.carousel-inner {
+    height: 400px;
+}
+
+.carousel-item {
+    height: 100%;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.carousel-caption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+}
+
+@media screen and (max-width: 768px) {
+    .banner {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .mary {
+        width: 50%;
+    }
+
+    .hardy {
+        width: 50%;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .type {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-info {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .foot {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+
+    .lets,
+    .connect {
+        text-align: left;
+    }
+
 }
